--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -1,44 +1,46 @@
 \subsection{Quantity}
-Die Klasse Quantity dient zur Angabe von einheitenbehafteten Werten. Jede Einheit ist dabei in einem Einheitentyp typisiert (siehe \refImg{klassendiagramm_quantity_complete}). Bei den Quantitäten gibt es atomare, die nur einen Wert mit einer Einheit besitzen, und zusammengesetzte, die einen Vektor atomarer Quantitäten mit unterschiedlichen Einheiten darstellen, wobei die Einheiten alle im selben Einheitentyp typisiert sein müssen.
+Die Klasse \term{Quantity} dient zur Angabe von einheitenbehafteten Werten. Jede Einheit ist dabei in einem Einheitentyp typisiert (siehe \refImg{klassendiagramm_quantity_complete}). Bei den Quantitäten gibt es atomare, die nur einen Wert mit einer Einheit besitzen, und zusammengesetzte, die einen Vektor atomarer Quantitäten mit unterschiedlichen Einheiten darstellen, wobei die Einheiten alle im selben Einheitentyp typisiert sein müssen.
 
 \img[width=\relWidth{1}]{quantity/Ausschnitt_Quantity_Komplett.pdf}{Klassendiagramm - Ausschnitt Quantity}{klassendiagramm_quantity_complete}
 
 \subsubsection{UnitTypeManager}
 
-Der UnitTypeManager beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht sichtbare Listen zur Verwaltung von Einheiten (Units) und Einheitentypen (UnitTypes).
+Der \term{UnitTypeManager} beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht sichtbare Listen zur Verwaltung von Einheiten (\term{Units}) und Einheitentypen (\term{UnitTypes}).
 
 \begin{description}
 \item[AbsUnitType** unitTypes] Diese Liste enthält alle Einheitentypen, die der Manager verwaltet.
 \item[AbsUnit ** units] Hier werden alle Einheiten abgelegt, die der Manager verwaltet.
-\item[ReferenceType** refTypes] Diese Liste enthält alle Referenz-Typen, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheitentypen (CompoundUnitTypes)
-\item[Reference** refs] Hier werden alle Referenzen abgelegt, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheiten (CompoundUnits)
+\item[ReferenceType** refTypes] Diese Liste enthält alle Referenztypen, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheitentypen (\term{CompoundUnitTypes}).
+\item[Reference** refs] In dieser Liste werden alle Referenzen abgelegt, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheiten (\term{CompoundUnits}).
 \end{description}
 
 \subsubsection{FractionManager}\label{FractionManager}
 
-Der FractionManager verwaltet alle Brüche so, dass jede Rationale Zahl als Bruch nur einmal durchgekürzt (als \emph{Repräsentant}) vorkommt. Die Brüche werden durch ihre textuelle Repräsentation indiziert. Da dieser Index sehr schnell sehr groß werden kann, wird in der nächsten Ausbaustufe eine performantere Form der Indizierung gesucht.
-Über die Operation \textit{getFraction(key:String):Fraction} wird auf einen vorhandenen Bruch zugegriffen, wobei der Schlüssel die \textit{toString-Ausgabe} des Bruchs ist.
-Durch ie Operation \textit{addFraction} wird ein neuer Bruch erzeugt und über den FractionManager verwaltet, wenn er erstmalig benötigt wird. Die Operation \textit{invertSign(f:Fraction):Fraction} sucht das Negativkomplement zu der Zahl und erstellt es, falls nötig.
+Der \term{FractionManager} verwaltet alle Brüche so, dass jede Rationale Zahl als Bruch nur einmal durchgekürzt (als \emph{Repräsentant}) vorkommt. Die Brüche werden durch ihre textuelle Repräsentation indiziert. Da dieser Index sehr schnell sehr groß werden kann, wird in der nächsten Ausbaustufe eine performantere Form der Indizierung gesucht.
 
-GOJA unterstütz keine 3-stelligen Assoziationen bei denen der Wert eines Wert-Schlüssel-Paares ein in GOJA primitiver Typ ist. Deswegen wurde die Klasse \textit{FractionWrapper} erstellt, die den Wert des Bruchs umhüllt. Somit wird das Problem umgangen: \texttt{FractionWrapper **String** managedFractions;}
+Über die Operation \textit{getFraction(key:String):Fraction} wird auf einen vorhandenen Bruch zugegriffen, wobei der Schlüssel die \textit{toString-Ausgabe} des Bruchs ist.
+Durch die Operation \textit{addFraction} wird ein neuer Bruch erzeugt und über den \term{FractionManager} verwaltet, wenn er erstmalig benötigt wird. Die Operation \textit{invertSign(f:Fraction):Fraction} sucht das Negativkomplement zu der Zahl und erstellt es, falls nötig.
+
+GOJA unterstützt keine dreistelligen Assoziationen, bei denen der Wert eines Wert-Schlüssel-Paares ein in GOJA primitiver Typ ist. Deshalb wurde die Klasse \textit{FractionWrapper} erstellt, die den Wert des Bruchs umhüllt. Somit wird das Problem umgangen: \texttt{FractionWrapper **String** managedFractions;}
 
 
 \subsubsection{QuantityManager}\label{QuantityManager}
 
-Der QuantityManager verwaltet die Zugriffe auf Quantitäten und ist die Schnittstelle zum Erstellen neuer Exemplare.
-Zudem wird der FractionManager als zentrale Fassade für das arithmetische und logische Operieren auf Quantitäten verwendet (siehe dazu Abschnitt \ref{Berechnungen}).
+Der \term{QuantityManager} verwaltet die Zugriffe auf Quantitäten und ist die Schnittstelle zum Erstellen neuer Exemplare.
+Zudem wird der \term{FractionManager} als zentrale Fassade für das arithmetische und logische Operieren auf Quantitäten verwendet (siehe dazu Abschnitt \ref{Berechnungen}).
 
-Beim Erstellen einer atomaren Quantität referenziert die \textit{amount}-Assoziation ein Fraction-Objekt aus dem FractionManager. Wird beim Anlegen der Quantität festgestellt, dass es diesen Bruch noch nicht gibt,
+Beim Erstellen einer atomaren Quantität referenziert die \textit{amount}-Assoziation ein \term{Fraction}-Objekt aus dem \term{FractionManager}. 
+Wird beim Anlegen der Quantität festgestellt, dass es diesen Bruch noch nicht gibt,
 wird er neu erstellt und in die Collection der verwalteten Brüche im FractionManager eingefügt.
 
 \subsubsection{UnitTypes}
 \img[width=\relWidth{0.7}]{quantity/Ausschnitt_Unit.pdf}{Klassendiagramm - Ausschnitt Unit}{klassendiagramm_unit}
-Die Einheitentypen (UnitTypes, siehe auch \refImg{klassendiagramm_unit}) geben an, welche verschiedenen Einheiten fachlich zusammen gehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. 
-In diesem Fall ist der Einheitentyp Währung und die beiden zugehörigen Einheiten sind Dollar und Euro. Bei Euro und Kilometer hingegen macht es wenig Sinn, diese zu Addieren oder zu Subtrahieren, 
-denn das eine ist eine Währung und das andere eine Strecken-Angabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, 
-wodurch dann zusammengesetzte Einheitentypen (CompoundUnitTypes) wie Geschwindigkeit (Strecke/Zeit) entstehen.
+Die Einheitentypen (\term{UnitTypes}, siehe auch \refImg{klassendiagramm_unit}) geben an, welche verschiedenen Einheiten fachlich zusammengehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. 
+In diesem Fall ist der Einheitentyp \qq{Währung} und die beiden zugehörigen Einheiten sind \qq{Dollar} und \qq{Euro}. Bei \qq{Euro} und \qq{Kilometer} hingegen macht es wenig Sinn, diese zu addieren oder zu subtrahieren, 
+denn das eine ist eine Währung und das andere eine Streckenangabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, 
+wodurch dann zusammengesetzte Einheitentypen (\term{CompoundUnitTypes}) wie \qq{Geschwindigkeit ($\frac{Strecke}{Zeit}$)} entstehen.
 
-Zur Verwaltung von UnitTypes und CompoundUnitTypes stellt der UnitTypeManager 8 transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
+Zur Verwaltung von \term{UnitTypes} und \term{CompoundUnitTypes} stellt der term{UnitTypeManager} acht transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
 
 \begin{description}
 \item[createUnitType]
@@ -46,50 +48,50 @@ Diese Operation dient zum Erstellen eines neuen atomaren Einheitentypen. Da jede
 \item[fetchScalarType]
 Liefert den skalaren Einheitentyp, welcher aus einem zusammengesetzten Einheitentypen ohne Referenzen auf atomare Typen besteht. 
 \item[changeUTName]
-Mit dieser Operation kann der Name eines Einheitentypen geändert werden. Ebenso wie beim neu erstellen, gibt es auch hier eine DoubleDefinitionException, wenn schon ein Einheitentyp mit diesem Namen existiert.
+Mit dieser Operation kann der Name eines Einheitentypen geändert werden. Ebenso wie beim Neuerstellen, gibt es auch hier eine \term{DoubleDefinitionException}, wenn schon ein Einheitentyp mit diesem Namen existiert.
 \item[addReferenceType]
-Mit dieser Operation kann einem Einheitentypen, egal ob zusammengesetzt oder atomar, eine Referenz auf einen atomaren Einheitentypen hinzugefügt werden. Hierdurch entsteht dann ein neuer zusammengesetzter Einheitentyp. Zusätzlich zu dem zu referenzierenden Einheitentypen muss noch der Exponent der Referenz und der Name des neu entstehenden zusammengesetzten Einheitentypen übergeben werden. Wie bei den anderen beiden Methoden gilt auch hier: ist der Name schon vorhanden, gibt es eine DoubleDefinitionException. Existiert schon ein Einheitentyp mit genau den selben Referenzen, wird kein neuer Einheitentyp erstellt, sondern der vorhandene zurückgegeben.
+Mit dieser Operation kann einem Einheitentypen, egal ob zusammengesetzt oder atomar, eine Referenz auf einen atomaren Einheitentypen hinzugefügt werden. Hierdurch entsteht dann ein neuer zusammengesetzter Einheitentyp. Zusätzlich zu dem zu referenzierenden Einheitentypen muss noch der Exponent der Referenz und der Name des neu entstehenden zusammengesetzten Einheitentypen übergeben werden. Wie bei den anderen beiden Methoden gilt auch hier: ist der Name schon vorhanden, gibt es eine \term{DoubleDefinitionException}. Existiert schon ein Einheitentyp mit genau denselben Referenzen, wird kein neuer Einheitentyp erstellt, sondern der vorhandene zurückgegeben.
 \item[setDefaultUnit]
-Diese Methode weist einem atomaren Einheitentypen eine Standard-Einheit zu, die für Umrechnungen in andere Einheiten benötigt wird. Die Umrechnungen werden im Abschnitt \ref{ConversionsKapitel} genauer erläutert.
+Diese Methode weist einem atomaren Einheitentypen eine Standardeinheit zu, die für Umrechnungen in andere Einheiten benötigt wird. Die Umrechnungen werden im Abschnitt \ref{ConversionsKapitel} genauer erläutert.
 \end{description}
 
 Folgende Operationen sind für die interne Verarbeitung relevant und können nicht über die Oberfläche aufgerufen werden:
 
 \begin{description}
 \item[getExistingCUT]
-Diese Operation ermittelt an Hand einer Liste von Referenzen, ob schon ein zusammengesetzter Einheitentyp mit genau diesen Referenzen existiert, und, wenn vorhanden, wird er zurückgegeben. 
+Diese Operation ermittelt anhand einer Liste von Referenzen, ob schon ein zusammengesetzter Einheitentyp mit genau diesen Referenzen existiert, und, wenn vorhanden, wird er zurückgegeben. 
 \item[fetchCUT]
-Diese Methode prüft zunächst an Hand einer Liste von Referenzen, ob schon ein Einheitentyp mit diesen existiert (dazu wird getExistingCUT verwendet) und legt, wenn nicht vorhanden, diesen neu an. Anschließend wird der Einheitentyp, der durch die übergebenen Referenzen definiert ist, zurückgegeben. Dafür muss auch ein Name übergeben werden, der jedoch nur beim Neu erstellen Verwendung findet. Auch hier gilt: Ist der Name schon vorhanden, gibt es eine DoubleDefinitionException. Diese Methode dient der Vermeidung von doppelt angelegten Einheitentypen.
+Diese Methode prüft zunächst anhand einer Liste von Referenzen, ob schon ein Einheitentyp mit diesen existiert (dazu wird \term{getExistingCUT} verwendet) und legt, wenn nicht vorhanden, diesen neu an. Anschließend wird der Einheitentyp, der durch die übergebenen Referenzen definiert ist, zurückgegeben. Dafür muss auch ein Name übergeben werden, der jedoch nur beim Neu erstellen Verwendung findet. Auch hier gilt: Ist der Name schon vorhanden, gibt es eine \term{DoubleDefinitionException}. Diese Methode dient der Vermeidung von doppelt angelegten Einheitentypen.
 \item[fetchReferenceType]
 Diese Operation ermittelt, ob es schon eine Referenz auf einen Einheitentyp mit einem bestimmten Exponenten gibt. Wenn ja, wird sie zurückgegeben, wenn nicht, wird eine neue erstellt. Diese Methode dient der Vermeidung von doppelt angelegten Referenzen auf Einheitentypen.
 \end{description}
 
 
 \subsubsection{Units}
-Fachlich gesehen können Einheiten (Units) von Quantitäten angenommen werden und sind in Einheitentypen typisiert (siehe \refImg{klassendiagramm_unit}).
-Dabei wird zwischen atomaren Einheiten (z.B. Meter [m]) und zusammengesetzten Einheiten (z.B. Kilometer pro Stunde [km/h]) unterschieden.
+Fachlich gesehen können Einheiten (\term{Units}) von Quantitäten angenommen werden und sind in Einheitentypen typisiert (siehe \refImg{klassendiagramm_unit}).
+Dabei wird zwischen atomaren Einheiten (z.~B. Meter $m$) und zusammengesetzten Einheiten (z.~B. Kilometer pro Stunde $\frac{km}{h}$]) unterschieden.
 
 \subsubsubsection{Objektmodell}
 
-Die Zusammenhänge zwischen Units und UnitTypes sollen an dieser Stelle anhand eines beispielhaften Objektmodells in \refImg{unit_unittypes_objektmodell} verdeutlicht werden.
+Die Zusammenhänge zwischen \term{Units} und \term{UnitTypes} sollen an dieser Stelle anhand eines beispielhaften Objektmodells in \refImg{unit_unittypes_objektmodell} verdeutlicht werden.
 
 \img[width=\relWidth{1}]{quantity/unit_unittypes_objektmodell.pdf}{Objektmodell - Geschwindigkeit und Beschleunigung}{unit_unittypes_objektmodell}
 
 Auf der Typebene gibt es die beiden atomaren UnitTypes \textit{Strecke} und \textit{Zeit}, außerdem zwei CompoundUnitTypes \textit{Geschwindigkeit} und \textit{Beschleunigung}. \textit{Geschwindigkeit} hat zwei Referenzen (RefTypes), eine mit dem Exponent 1 auf \textit{Strecke} und eine mit dem Exponenten -1 auf \textit{Zeit}. \textit{Beschleunigung} hat ebenfalls eine Referenz mit dem Exponenten 1 auf \textit{Strecke}. Hierbei wird dasselbe RefType-Objekt verwendet, welches auch \textit{Geschwindigkeit} nutzt. Außerdem besitzt \textit{Beschleunigung} noch eine Referenz auf \textit{Zeit}. Da diese jedoch den Exponenten -2 hat, wird hierbei ein anderes RefType-Objekt verwendet als bei \textit{Geschwindigkeit}.
 
-Auf der Exemplarebene gibt es die atomaren Units \textit{km} (typisiert in \textit{Strecke}) sowie \textit{h} und \textit{s} (typisiert in \textit{Zeit}). 
-Außerdem gibt es die CompoundUnits \textit{km/h} (typisiert in \textit{Geschwindigkeit}) 
-sowie \textit{km/(s*h)} (typisiert in \textit{Beschleunigung}). Auf \textit{km} gibt es eine Referenz mit Exponent 1, 
-welche sowohl von \textit{km/h} als auch von \textit{km/(s*h)} verwendet wird. 
-Die Referenz mit Exponent -1 auf \textit{h} wird ebenfalls von \textit{km/h} und \textit{km/(s*h)} genutzt. 
-Außerdem geht von \textit{km/(s*h)} aus noch eine Referenz mit Exponenten -1 auf \textit{s}. 
-Somit gibt es auf der Exemplarebene von der Einheit \textit{Beschleunigung} zwei Referenzen auf \textit{Zeit}-Einheiten. 
+Auf der Exemplarebene gibt es die atomaren Units $km$ (typisiert in \qq{Strecke}) sowie $h$ und $s$ (typisiert in \qq{Zeit}). 
+Außerdem gibt es die CompoundUnits $\frac{km}{h}$ (typisiert in \qq{Geschwindigkeit}) 
+sowie $\frac{km}{s*h}$ (typisiert in \qq{Beschleunigung}). Auf $km$ gibt es eine Referenz mit Exponent 1, 
+welche sowohl von $\frac{km}{h}$ als auch von $\frac{km}{s*h}$ verwendet wird. 
+Die Referenz mit Exponent -1 auf $h$ wird ebenfalls von $\frac{km}{h}$ und $\frac{km}{s*h}$ genutzt. 
+Außerdem geht von $\frac{km}{s*h}$ aus noch eine Referenz mit Exponenten -1 auf $s$. 
+Somit gibt es auf der Exemplarebene von der Einheit \qq{Beschleunigung} zwei Referenzen auf \qq{Zeit}-Einheiten. 
 Beim Summieren der Exponenten wird dann der auf der Typebene geforderte Exponent -2 geliefert.
 
 \newpage
 \subsubsubsection{Konsistenzbedingungen}
 
-Folgende konsistenzbedingungen stellen sicher, dass sich Einheiten und Einheitentypen Konsistent zueinander verhalten:
+Folgende Konsistenzbedingungen stellen sicher, dass sich Einheiten und Einheitentypen konsistent zueinander verhalten:
 
 \begin{equation} \forall ut \in UnitType : ut.defaultUnit.type = ut \end{equation}
 
@@ -112,52 +114,56 @@ ut \in rt.ref \Rightarrow rt.exp = \sum_{s \in \bigcup \{ x \in cu.refs | x.ref.
 
 \subsubsubsection{Verwalten von Units}
 
-Für die Verwaltung von Units und CompoundUnits stellt der UnitTypeManager acht transaktionale Operationen bereit.
+Für die Verwaltung von \term{Units} und \term{CompoundUnits} stellt der \term{UnitTypeManager} acht transaktionale Operationen bereit.
 Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
 
 \begin{description}
 \item[createUnit]
-Diese Operation dient zum Erstellen einer neuen Unit. Da jede Unit fachlich in einem UnitType typisiert werden und einen Namen haben muss, können dieser Methode diese Werte entsprechend übergeben werden. Eine DoubleDefinitionException wird geworfen, wenn eine Unit mit dem gewählten Namen bereits existiert.
+Diese Operation dient zum Erstellen einer neuen \term{Unit}. Da jede Unit fachlich in einem \term{UnitType} typisiert werden und einen Namen haben muss, können dieser Methode diese Werte entsprechend übergeben werden. Eine \term{DoubleDefinitionException} wird geworfen, wenn eine \term{Unit} mit dem gewählten Namen bereits existiert.
 \item[changeUName]
-Diese Operation dient zum Umbenennen einer Unit. Auch hier wird die DoubleDefinitionException im doppelten Namensfall geworfen.
+Diese Operation dient zum Umbenennen einer \term{Unit}. Auch hier wird die \term{DoubleDefinitionException} im doppelten Namensfall geworfen.
 \item[fetchScalar]
-Liefert die eine CompoundUnit, die keine Referenzen zu anderen Units aufweist.
+Liefert die eine \term{CompoundUnits}, die keine Referenzen zu anderen \term{Units} aufweist.
 \item[addReference]
-Diese Operation kann sowohl auf zusammengesetzten Einheiten, als auch auf atomaren Einheiten angewendet werden. Sie dient zum erstellen von CompoundUnits. Analog zur createUnit-Methode wird hier ein Name benötigt. Die entsprechende neue Referenz zur ausgewählten Unit wird durch einen Exponenten definiert. Die DoubleDefinitionException wird auch hier geworfen, falls es zu Namenskonflikten kommt.
+Diese Operation kann sowohl auf zusammengesetzten Einheiten, als auch auf atomaren Einheiten angewendet werden. 
+Sie dient zum Erstellen von \term{CompoundUnits}. Analog zur \term{createUnit()}-Methode wird hier ein Name benötigt. Die entsprechende neue Referenz zur ausgewählten \term{Unit} wird durch einen Exponenten definiert. Die \term{DoubleDefinitionException} wird auch hier geworfen, falls es zu Namenskonflikten kommt.
 \item[setConversion]
-Mittels dieser Operation lässt sich für eine Unit eine Conversion zur aktuellen DefaultUnit des entsprechenden UnitTypes angeben. Die Umrechnungsrate besteht immer aus einem Faktor und einer Konstante. Die Conversions werden im Kapitel \ref{ConversionsKapitel} näher erläutert.
+Mittels dieser Operation lässt sich für eine \term{Unit} eine \term{Conversion} zur aktuellen \term{DefaultUnit} des entsprechenden \term{UnitTypes} angeben. Die Umrechnungsrate besteht immer aus einem Faktor und einer Konstante. Die \term{Conversions} werden im Kapitel \ref{ConversionsKapitel} näher erläutert.
 \end{description}
 
 Folgende Operationen sind für die interne Verarbeitung relevant und können nicht über die Oberfläche aufgerufen werden:
 \begin{description}
 
 \item[getExistingCU]
-Hier wird anhand einer Liste von vorhandenen Referenzen eine CompoundUnit ermittelt, welche durch genau diese Referenzen definiert ist. Sollte diese Unit noch nicht existieren, wird null zurückgeliefert. Diese Operation dient zum vermeiden von doppelt angelegten CompoundUnits.
+Hier wird anhand einer Liste von vorhandenen Referenzen eine CompoundUnit ermittelt, welche durch genau diese Referenzen definiert ist. Sollte diese Unit noch nicht existieren, wird null zurückgeliefert. Diese Operation dient zum vermeiden von doppelt angelegten \term{CompoundUnits}.
 \item[fetchCU]
-Diese Operation ist ähnlich der getExistingCU()-operation. jedoch wird hierbei die CompoundUnit angelegt, falls sie noch nicht existiert. Die Angabe eines Namens ist erforderlich, falls eine neue CompoundUnit zustande kommen sollte. Auch hier wird entsprechend eine DoubleDefinitionException geworfen, falls eine Unit mit dem gewählten Namen bereits existiert.
+Diese Operation ist ähnlich der \term{getExistingCU()}-Operation. Jedoch wird hierbei die \term{CompoundUnit} angelegt, falls sie noch nicht existiert. Die Angabe eines Namens ist erforderlich, falls eine neue \term{CompoundUnit} zustandekommen sollte. Auch hier wird entsprechend eine \term{DoubleDefinitionException} geworfen, falls eine \term{Unit} mit dem gewählten Namen bereits existiert.
 \item[fetchReference]
-Mithilfe dieser Operation kann eine Referenz-Instanz mit einem gewissen Exponenten auf eine bestimmte Unit ermittelt werden. Falls diese Instanz noch nicht existierte, wird sie erzeugt. Das dient zum vermeiden von Doppelt anlegten Referenzen.
+Mithilfe dieser Operation kann ein Referenzexemplar mit einem gewissen Exponenten auf eine bestimmte \term{Unit} ermittelt werden. Falls dieses Exemplar noch nicht existierte, wird es erzeugt. Das dient zum Vermeiden von doppelt angelegten Referenzen.
 \end{description}
 
 \subsubsubsection{Conversions}\label{ConversionsKapitel} 
 
 \img[width=\relWidth{0.7}]{quantity/Ausschnitt_Conversion.pdf}{Klassendiagramm - Ausschnitt Conversion}{klassendiagramm_conversion}
 
-Eine Conversion, also die Umrechnung von einer Unit zur entsprechenden DefaultUnit eines UnitTypes, kann über zwei Wege zustande kommen, bzw. verändert werden: Zum einen über die setConversion-Operation und zum anderen über die setDefaultUnit-Operation.
-Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede Conversion enthält einen Faktor und eine Konstante vom Typ Fraction (siehe \refImg{klassendiagramm_conversion}), um der linearen Funktion $m*x+b$ gerecht zu werden. 
+Eine \term{Conversion}, also die Umrechnung von einer \term{Unit} zur entsprechenden \term{Default"-Unit} eines \term{UnitTypes}, kann über zwei Wege zustandekommen bzw. verändert werden: Zum einen über die \term{setConversion()}-Operation und zum anderen über die \term{setDefaultUnit()}-Operation.
+\term{Conversions} sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede \term{Conversion} enthält einen Faktor und eine Konstante vom Typ \term{Fraction} (siehe \refImg{klassendiagramm_conversion}), um der linearen Funktion $m*x+b$ gerecht zu werden. 
 Die Angabe von $m$ und $b$ hat folgende Semantik: 
 \[y (DefaultUnit) = m * unitWert + b\]
 
 
-Am Beispiel von Fahrenheit und Celsius lautet für Celsius die Conversion folgendermaßen, wenn Fahrenheit die DefaultUnit darstellt:
+Am Beispiel von Fahrenheit und Celsius lautet für Celsius die \term{Conversion} folgendermaßen, wenn Fahrenheit die \term{DefaultUnit} darstellt:
 
 \[Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32\]
 
-Mittels setConversion() wird eine bereits gesetzte Conversion für eine Unit überschrieben.
-Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notwendig, da diese ja in Abhängigkeit zu einer nun veralteten DefaultUnit angegeben wurden. Das betrifft alle Umrechnungen für Units zum selben UnitType wie die DefaultUnit.
-\refImg{setDefaultUnitGrafik} beschreibt die Umrechnungen, falls sich eine DefaultUnit ändert.
+Mittels \term{setConversion()} wird eine bereits gesetzte \term{Conversion} für eine \term{Unit} überschrieben.
+Bei \term{setDefaultUnit()} wird eine Umrechnung von bereits vorhanden \term{Conversions} notwendig, da diese ja in Abhängigkeit zu einer nun veralteten \term{DefaultUnit} angegeben wurden. Das betrifft alle Umrechnungen für \term{Units} zum selben \term{UnitType} wie die \term{DefaultUnit}.
+
+\refImg{setDefaultUnitGrafik} beschreibt die Umrechnungen, falls sich eine \term{DefaultUnit} ändert.
 \img[width=\relWidth{0.8}]{quantity/setDefaultUnit.png}{Umrechnung beim Ändern einer DefaultUnit}{setDefaultUnitGrafik}
-Im gezeigten Beispiel gibt es drei Einheiten a, b und c, wobei zunächst a die DefaultUnit zum gemeinsamen UnitType darstellt (oberer Bereich). Die DefaultUnit kann nur den Umrechnungsfaktor 1 haben, da die Funktion immer umkehrbar ist (1a=1a). Für den unteren Bereich der Abbildung wird dann die DefaultUnit auf b gesetzt. Die jeweils neuen Conversions ergeben sich, indem die jeweilige Funktion der Unit mit der noch aktuellen Funktion der neuen DefaultUnit (also b) gleich gesetzt wird und mittels Äquivalenzumformung zur neuen DefaultUnit hin umgestellt wird (rechter Bereich). Für die neue DefaultUnit ist danach der Umrechnungsfaktor dann entsprechend wieder 1.
+Im gezeigten Beispiel gibt es drei Einheiten $a$, $b$ und $c$, wobei zunächst $a$ die \term{DefaultUnit} zum gemeinsamen \term{UnitType} darstellt (oberer Bereich). Die \term{DefaultUnit} kann nur den Umrechnungsfaktor $1$ haben, da die Funktion immer umkehrbar ist ($1a=1a$). 
+
+Für den unteren Bereich der Abbildung wird dann die \term{DefaultUnit} auf $b$ gesetzt. Die jeweils neuen \term{Conversions} ergeben sich, indem die jeweilige Funktion der \term{Unit} mit der noch aktuellen Funktion der neuen \term{DefaultUnit} (also $b$) gleichgesetzt wird und mittels Äquivalenzumformung zur neuen \term{Default"-Unit} hin umgestellt wird (rechter Bereich). Für die neue \term{DefaultUnit} ist der Umrechnungsfaktor wieder $1$.
 
 Die entsprechende Konsistenzbedingung für diesen Fall lautet wie folgt:
 
@@ -175,13 +181,13 @@ f.factor = 1 \wedge f.constant = 0
 Quantitäten können sowohl atomar als auch zusammengesetzt sein.
 Dies wird definiert durch die \textit{parts}-Assoziation zwischen \term{CompoundQuantity} und \term{Quantity}. 
 Dabei können zusammengesetzte Quantitäten als Vektoren aufgefasst werden, deren Elemente einfache Quantitäten sind. 
-\term{In einem Vektor dürfen nur solche Quantiäten enthalten sein, die mit dem gleichen UnitType assoziiert sind}. 
+In einem Vektor dürfen nur solche Quantiäten enthalten sein, die mit demselben \term{UnitType} assoziiert sind. 
 
 \subsubsubsection{Berechnungen und Vergleiche}\label{Berechnungen}
 
 \img[width=\relWidth{1}]{quantity/Ausschnitt_Quantity.pdf}{Klassendiagramm - Ausschnitt Quantitäten und Berechnungen}{quantity_and_calc}
 
-Die Addition, Subtraktion, Division und Multiplikation sind als Grundrechenarten (BasicCalculation) im Klassenmodell (siehe \refImg{quantity_and_calc}) dargestellt. 
+Die Addition, Subtraktion, Division und Multiplikation sind als Grundrechenarten (\term{BasicCalculation}) im Klassenmodell (siehe \refImg{quantity_and_calc}) dargestellt. 
 Es wird zwischen zwei Grundrechenarten unterschieden, welche die Referenzen der Einheit verändern und solchen, welche dies nicht tun. 
 Beispielsweise ergibt die Addition zweier Längenangaben (z.B. Meter) wieder eine Längenangabe. 
 Eine solche Rechnung wird als \emph{einheitstypbewahrend} bezeichnet. Im Klassenmodell ist diese Generalisierung als die Klasse \textit{UnitImutabCalc} zu erkennen. 
