--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
@@ -1,7 +1,7 @@
 \subsection{Objektwelt}
 Im Folgenden werden die Anpassungen der Klasse \term{Object} und deren Methoden im Vergleich zum Modell aus der Vorlesung betrachtet.
 
-\img[width=\relWidth{0.5}]{type/Object.pdf}{Ausschnitt Objektwelt}{img_obj}
+\img[width=\relWidth{0.5}]{type/Object.pdf}{Klassendiagramm - Ausschnitt Objektwelt}{img_obj}
 
 \subsubsection{Änderungen und neue Methoden}
 Die Klasse \term{Object} wurde wie viele Klassen im Goja-Modell um den Präfix \qq{M} erweitert um Verwechselungen mit der Klasse \term{java.lang.Object} zu vermeiden.
