--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Observation.tex
@@ -4,7 +4,7 @@ Typ zeigte, der nur aus \term{Singletons} bestand. Damit dies aber möglich ist,
 abstrakt und alle Blätter \term{Singletons} sein. Diese Bedingung muss aber für allgemeine Singletons nicht gelten. Um an dieser 
 Stelle eine klare Trennung zu erreichen und die Transparenz des Modells zu erhöhen, wurden \term{Observation} als eigener Modellabschnitt ausgelagert.
 
-\img[width=\relWidth{1}]{observation/observation.pdf}{Ausschnitt Observations}{img_observations}
+\img[width=\relWidth{1}]{observation/observation.pdf}{Klassendiagramm - Ausschnitt Observations}{img_observations}
 
 \term{Observations} werden auf Modellebene durch die Klassen \term{Enum} und \term{ObservationType} repräsentiert. 
 Zum Interpretieren der \term{Observations} dienen Enumerationen. Das bedeutet, dass jeder konkreten \term{Observation}
